--- a/pages/19741.html
+++ b/pages/19741.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -315,10 +315,222 @@ margin-left: 0em;
 <p>This entry is about items in the <a class="existingWikiWord" href="/nlab/show/ADE-classification">ADE-classification</a> labeled by <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>D</mi><mn>4</mn></mrow><annotation encoding="application/x-tex">D4</annotation></semantics></math>. For the <a class="existingWikiWord" href="/nlab/show/D4-brane">D4-brane</a>, see there.</p>
 </blockquote>
 <hr />
+<div class="rightHandSide">
+<div class="toc clickDown" tabindex="0">
+<h3 id="context">Context</h3>
+
+<h4 id="mathematics">Mathematics</h4>
+
+<div class="hide"><ul>
+<li>
+<p><strong><a class="existingWikiWord" href="/nlab/show/mathematics">mathematics</a></strong></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/math+resources">math resources</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/history+of+mathematics">history of mathematics</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/foundations">Structural Foundations</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/logic">logic</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/internal+language">internal language</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/classical+mathematics">classical mathematics</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/evil">evil</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/constructive+mathematics">constructive mathematics</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/predicative+mathematics">predicative mathematics</a></li>
+
+<li><a href="http://ncatlab.org/nlab/list/foundational+axiom">category:foundational axiom</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/set+theory">set theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/structural+set+theory">structural set theory</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/category+theory">category theory</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Categories+and+Sheaves">Categories and Sheaves</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topos+theory">topos theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Sheaves+in+Geometry+and+Logic">Sheaves in Geometry and Logic</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/higher+category+theory">higher category theory</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/higher+topos+theory">higher topos theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/Higher+Topos+Theory">(∞,1)-topos theory</a>
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/models+for+%E2%88%9E-stack+%28%E2%88%9E%2C1%29-toposes">models for ∞-stack (∞,1)-toposes</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/stable+homotopy+theory">stable homotopy theory</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/rational+homotopy+theory">rational homotopy theory</a></li>
+</ul>
+</li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topology+and+geometry">Topology and Geometry</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/geometry">geometry</a> (general list), <a class="existingWikiWord" href="/nlab/show/topology">topology</a> (general list)</li>
+
+<li><a class="existingWikiWord" href="/nlab/show/general+topology">general topology</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/differential+topology">differential topology</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/differential+geometry">differential geometry</a>
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/synthetic+differential+geometry">synthetic differential geometry</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/symplectic+geometry">symplectic geometry</a></li>
+</ul>
+</li>
+
+<li><a class="existingWikiWord" href="/nlab/show/algebraic+geometry">algebraic geometry</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/noncommutative+algebraic+geometry">noncommutative algebraic geometry</a></li>
+
+<li><a class="existingWikiWord" href="/nlab/show/noncommutative+geometry">noncommutative geometry</a> (general flavour)</li>
+
+<li><a class="existingWikiWord" href="/nlab/show/higher+geometry">higher geometry</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/algebra">Algebra</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/universal+algebra">universal algebra</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/higher+algebra">higher algebra</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/homological+algebra">homological algebra</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/group+theory">group theory</a>, <a class="existingWikiWord" href="/nlab/show/ring+theory">ring theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/representation+theory">representation theory</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/algebraic+approaches+to+differential+calculus">algebraic approaches to differential calculus</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/counterexamples+in+algebra">counterexamples in algebra</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/analysis">analysis</a></p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/nonstandard+analysis">nonstandard analysis</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/functional+analysis">functional analysis</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/operator+algebras">operator algebras</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Fourier+transform">Fourier transform</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Lie+theory">Lie theory</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/infinity-Lie+theory+-+contents">higher Lie theory</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/probability+theory">probability theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/discrete+mathematics">discrete mathematics</a></p>
+</li>
+</ul><div>
+<p>
+  <a href="/nlab/edit/mathematicscontents">Edit this sidebar</a>
+</p>
+</div></div>
+</div>
+</div>
+
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
 <li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#triality'>Triality</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 </ul>
 </div>
@@ -337,6 +549,14 @@ margin-left: 0em;
 </li>
 
 <li>
+<p>as <a class="existingWikiWord" href="/nlab/show/finite+subgroups+of+SO%283%29">finite subgroups of SO(3)</a>:</p>
+
+<p>the <a class="existingWikiWord" href="/nlab/show/Klein+four-group">Klein four-group</a> (the smallest <a class="existingWikiWord" href="/nlab/show/dihedral+group">dihedral group</a>)</p>
+
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn><mo>×</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathbb{Z}/2 \times \mathbb{Z}/2</annotation></semantics></math></p>
+</li>
+
+<li>
 <p>as <a class="existingWikiWord" href="/nlab/show/finite+subgroups+of+SU%282%29">finite subgroups of SU(2)</a>:</p>
 
 <p>the <a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> of <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> 8 (the smallest <a class="existingWikiWord" href="/nlab/show/binary+dihedral+group">binary dihedral group</a>):</p>
@@ -351,25 +571,33 @@ margin-left: 0em;
 </li>
 </ol>
 
-<h2 id="related_concepts">Related concepts</h2>
+<h2 id="properties">Properties</h2>
 
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/triality">triality</a></li>
-</ul>
-</body></html>
+<h3 id="triality">Triality</h3>
+
+<p>The <a class="existingWikiWord" href="/nlab/show/symmetric+group">S3</a>-<a class="existingWikiWord" href="/nlab/show/symmetry+group">symmetry group</a> of the D4-diagram translates into interesting 3-fold symmetries of structures associated with the corresponding objects in the above list. This is known as <em><a class="existingWikiWord" href="/nlab/show/triality">triality</a></em>.</p>
+
+<h2 id="related_concepts">Related concepts</h2>
+<p><strong><a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE classification</a></strong> and <strong><a class="existingWikiWord" href="/nlab/show/McKay+correspondence">McKay correspondence</a></strong></p><table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a>/ <br /> <a class="existingWikiWord" href="/nlab/show/Dynkin+quiver">Dynkin quiver</a></th><th><a class="existingWikiWord" href="/nlab/show/Platonic+solid">Platonic solid</a></th><th><a class="existingWikiWord" href="/nlab/show/classification+of+finite+rotation+groups">finite subgroups of SO(3)</a></th><th><a class="existingWikiWord" href="/nlab/show/classification+of+finite+rotation+groups">finite subgroups of SU(2)</a></th><th><a class="existingWikiWord" href="/nlab/show/simple+Lie+group">simple Lie group</a></th></tr></thead><tbody><tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>A</mi> <mrow><mi>n</mi><mo>≥</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">A_{n \geq 1}</annotation></semantics></math></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ℤ</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\mathbb{Z}_{n+1}</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ℤ</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\mathbb{Z}_{n+1}</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/special+unitary+group">special unitary group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SU(n)</annotation></semantics></math></td></tr>
+<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D4">D4</a></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Klein+four-group">Klein four-group</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> <a class="existingWikiWord" href="/nlab/show/Q8">Q8</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/SO%288%29">SO(8)</a></td></tr>
+<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>D</mi> <mrow><mi>n</mi><mo>≥</mo><mn>4</mn></mrow></msub></mrow><annotation encoding="application/x-tex">D_{n \geq 4}</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dihedron">dihedron</a>, <br /> <a class="existingWikiWord" href="/nlab/show/hosohedron">hosohedron</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dihedral+group">dihedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>D</mi> <mrow><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>−</mo><mn>2</mn><mo stretchy="false">)</mo></mrow></msub></mrow><annotation encoding="application/x-tex">D_{2(n-2)}</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/binary+dihedral+group">binary dihedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><msub><mi>D</mi> <mrow><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>−</mo><mn>2</mn><mo stretchy="false">)</mo></mrow></msub></mrow><annotation encoding="application/x-tex">2 D_{2(n-2)}</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/special+orthogonal+group">special orthogonal group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SO</mi><mo stretchy="false">(</mo><mn>2</mn><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SO(2n)</annotation></semantics></math></td></tr>
+<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>6</mn></msub></mrow><annotation encoding="application/x-tex">E_6</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/tetrahedron">tetrahedron</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/tetrahedral+group">tetrahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi></mrow><annotation encoding="application/x-tex">T</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/binary+tetrahedral+group">binary tetrahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>T</mi></mrow><annotation encoding="application/x-tex">2T</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/E6">E6</a></td></tr>
+<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>7</mn></msub></mrow><annotation encoding="application/x-tex">E_7</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cube">cube</a>, <br /> <a class="existingWikiWord" href="/nlab/show/octahedron">octahedron</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/octahedral+group">octahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>O</mi></mrow><annotation encoding="application/x-tex">O</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/binary+octahedral+group">binary octahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>O</mi></mrow><annotation encoding="application/x-tex">2O</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/E7">E7</a></td></tr>
+<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">E_8</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dodecahedron">dodecahedron</a>, <br /> <a class="existingWikiWord" href="/nlab/show/icosahedron">icosahedron</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/icosahedral+group">icosahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>I</mi></mrow><annotation encoding="application/x-tex">I</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/binary+icosahedral+group">binary icosahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>I</mi></mrow><annotation encoding="application/x-tex">2I</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/E8">E8</a></td></tr>
+</tbody></table></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on October  2, 2018 at 10:45:58.
+  Last revised on October  2, 2018 at 11:54:59.
   See the <a href="https://ncatlab.org/nlab/history/D4" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/D4" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/D4" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/D4/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/D4" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/D4" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/D4/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
