--- a/pages/10066.html
+++ b/pages/10066.html
@@ -851,7 +851,7 @@ margin-left: 0em;
 </li>
 
 <li id="Wilson16">
-<p><a class="existingWikiWord" href="/nlab/show/Dylan+Wilson">Dylan Wilson</a>, <em>Equivariant K-theory</em>, 2016 (<a href="https://www.math.uchicago.edu/~dwilson/notes/equivariant-k-theory-talk.pdf">pdf</a>, <span class="newWikiWord">WilsonKTheory16.pdf<a href="/nlab/files/WilsonKTheory16.pdf">?</a></span>)</p>
+<p><a class="existingWikiWord" href="/nlab/show/Dylan+Wilson">Dylan Wilson</a>, <em>Equivariant K-theory</em>, 2016 (<a href="https://www.math.uchicago.edu/~dwilson/notes/equivariant-k-theory-talk.pdf">pdf</a>, <a class="existingWikiWord" href="/nlab/files/WilsonKTheory16.pdf" title="pdf">pdf</a>)</p>
 </li>
 </ul>
 
@@ -890,14 +890,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 09:14:04.
+  Last revised on October  2, 2018 at 11:57:12.
   See the <a href="https://ncatlab.org/nlab/history/equivariant K-theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/equivariant+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+K-theory/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/equivariant+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/equivariant+K-theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/equivariant+K-theory/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/equivariant+K-theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/equivariant+K-theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/equivariant K-theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
