--- a/pages/16247.html
+++ b/pages/16247.html
@@ -468,25 +468,34 @@ margin-left: 0em;
 <h1 id="contents">Contents</h1>
 <div class='maruku_toc'>
 <ul>
-<li><a href='#definition'>Definition</a></li>
-<li><a href='#examples'>Examples</a></li>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#adeclassification'>ADE-Classification</a></li>
+</ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
 
-<h2 id="definition">Definition</h2>
+<h2 id="idea">Idea</h2>
 
 <p>(…)</p>
 
-<h2 id="examples">Examples</h2>
+<h2 id="properties">Properties</h2>
 
-<p>Those in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE classification</a> are</p>
+<h3 id="adeclassification">ADE-Classification</h3>
 
-<p><img src="https://ncatlab.org/nlab/files/ADEDynkin.jpg" width="490" /></p>
-
-<p>Of particular interest is <a class="existingWikiWord" href="/nlab/show/D4">D4</a>, which enjoys <a class="existingWikiWord" href="/nlab/show/triality">triality</a>.</p>
-
+<p>Those Dynkin diagrams in the <a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE classification</a> are the following</p>
+<center>
+<img src="https://ncatlab.org/nlab/files/ADEDynkin.jpg" width="490" />
+</center><p><strong><a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE classification</a></strong> and <strong><a class="existingWikiWord" href="/nlab/show/McKay+correspondence">McKay correspondence</a></strong></p><table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/Dynkin+diagram">Dynkin diagram</a>/ <br /> <a class="existingWikiWord" href="/nlab/show/Dynkin+quiver">Dynkin quiver</a></th><th><a class="existingWikiWord" href="/nlab/show/Platonic+solid">Platonic solid</a></th><th><a class="existingWikiWord" href="/nlab/show/classification+of+finite+rotation+groups">finite subgroups of SO(3)</a></th><th><a class="existingWikiWord" href="/nlab/show/classification+of+finite+rotation+groups">finite subgroups of SU(2)</a></th><th><a class="existingWikiWord" href="/nlab/show/simple+Lie+group">simple Lie group</a></th></tr></thead><tbody><tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>A</mi> <mrow><mi>n</mi><mo>≥</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">A_{n \geq 1}</annotation></semantics></math></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ℤ</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\mathbb{Z}_{n+1}</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>ℤ</mi> <mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow></msub></mrow><annotation encoding="application/x-tex">\mathbb{Z}_{n+1}</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/special+unitary+group">special unitary group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SU(n)</annotation></semantics></math></td></tr>
+<tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/D4">D4</a></td><td style="text-align: left;"></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Klein+four-group">Klein four-group</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/quaternion+group">quaternion group</a> <a class="existingWikiWord" href="/nlab/show/Q8">Q8</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/SO%288%29">SO(8)</a></td></tr>
+<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>D</mi> <mrow><mi>n</mi><mo>≥</mo><mn>4</mn></mrow></msub></mrow><annotation encoding="application/x-tex">D_{n \geq 4}</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dihedron">dihedron</a>, <br /> <a class="existingWikiWord" href="/nlab/show/hosohedron">hosohedron</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dihedral+group">dihedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>D</mi> <mrow><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>−</mo><mn>2</mn><mo stretchy="false">)</mo></mrow></msub></mrow><annotation encoding="application/x-tex">D_{2(n-2)}</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/binary+dihedral+group">binary dihedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><msub><mi>D</mi> <mrow><mn>2</mn><mo stretchy="false">(</mo><mi>n</mi><mo>−</mo><mn>2</mn><mo stretchy="false">)</mo></mrow></msub></mrow><annotation encoding="application/x-tex">2 D_{2(n-2)}</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/special+orthogonal+group">special orthogonal group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SO</mi><mo stretchy="false">(</mo><mn>2</mn><mi>n</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SO(2n)</annotation></semantics></math></td></tr>
+<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>6</mn></msub></mrow><annotation encoding="application/x-tex">E_6</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/tetrahedron">tetrahedron</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/tetrahedral+group">tetrahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi></mrow><annotation encoding="application/x-tex">T</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/binary+tetrahedral+group">binary tetrahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>T</mi></mrow><annotation encoding="application/x-tex">2T</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/E6">E6</a></td></tr>
+<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>7</mn></msub></mrow><annotation encoding="application/x-tex">E_7</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cube">cube</a>, <br /> <a class="existingWikiWord" href="/nlab/show/octahedron">octahedron</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/octahedral+group">octahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>O</mi></mrow><annotation encoding="application/x-tex">O</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/binary+octahedral+group">binary octahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>O</mi></mrow><annotation encoding="application/x-tex">2O</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/E7">E7</a></td></tr>
+<tr><td style="text-align: left;"><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>E</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">E_8</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dodecahedron">dodecahedron</a>, <br /> <a class="existingWikiWord" href="/nlab/show/icosahedron">icosahedron</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/icosahedral+group">icosahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>I</mi></mrow><annotation encoding="application/x-tex">I</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/binary+icosahedral+group">binary icosahedral group</a> <br /> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>2</mn><mi>I</mi></mrow><annotation encoding="application/x-tex">2I</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/E8">E8</a></td></tr>
+</tbody></table>
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
@@ -510,14 +519,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 10:52:02.
+  Last revised on October  2, 2018 at 11:50:59.
   See the <a href="https://ncatlab.org/nlab/history/Dynkin diagram" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dynkin+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dynkin+diagram/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Dynkin+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dynkin+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Dynkin+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dynkin+diagram/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Dynkin+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dynkin+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Dynkin diagram/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
