--- a/pages/17262.html
+++ b/pages/17262.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9081/#Item_7" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9081/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -482,7 +482,6 @@ margin-left: 0em;
 <li><a href='#definition'>Definition</a></li>
 <li><a href='#properties'>Properties</a></li>
 <li><a href='#related_entries'>Related entries</a></li>
-<li><a href='#related_pages'>Related pages</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
@@ -490,7 +489,7 @@ margin-left: 0em;
 <h2 id="idea">Idea</h2>
 
 <p>The <em>quaternion group</em> of <a class="existingWikiWord" href="/nlab/show/order+of+a+group">order</a> 8, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math>, is the <a class="existingWikiWord" href="/nlab/show/finite+subgroup+of+SU%282%29">finite subgroup of SU(2)</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub><mo>⊂</mo><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo><mo>≃</mo><msup><mi>S</mi> <mn>3</mn></msup><mo>⊂</mo><mi>ℍ</mi></mrow><annotation encoding="application/x-tex">Q_8 \subset SU(2) \simeq S^3 \subset \mathbb{H}</annotation></semantics></math> of unit <a class="existingWikiWord" href="/nlab/show/quaternions">quaternions</a> which consists of the canonical four <a class="existingWikiWord" href="/nlab/show/linear+basis">basis</a>-quaternions and their negatives:</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><mo maxsize="1.2em" minsize="1.2em">{</mo><mo>±</mo><mn>1</mn><mo>,</mo><mspace width="thinmathspace"></mspace><mo>±</mo><mi>i</mi><mspace width="thinmathspace"></mspace><mo>±</mo><mi>i</mi><mspace width="thinmathspace"></mspace><mo>±</mo><mi>k</mi><mo maxsize="1.2em" minsize="1.2em">}</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub><mspace width="thickmathspace"></mspace><mo>=</mo><mspace width="thickmathspace"></mspace><mo maxsize="1.2em" minsize="1.2em">{</mo><mo>±</mo><mn>1</mn><mo>,</mo><mspace width="thinmathspace"></mspace><mo>±</mo><mi>i</mi><mspace width="thinmathspace"></mspace><mo>±</mo><mi>j</mi><mspace width="thinmathspace"></mspace><mo>±</mo><mi>k</mi><mo maxsize="1.2em" minsize="1.2em">}</mo><mspace width="thinmathspace"></mspace><mo>.</mo></mrow><annotation encoding="application/x-tex">
   Q_8
   \;=\;
   \big\{
@@ -498,7 +497,7 @@ margin-left: 0em;
      \, 
      \pm i
      \, 
-     \pm i
+     \pm j
      \, 
      \pm k
   \big\}
@@ -579,12 +578,6 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id="related_pages">Related pages</h2>
-
-<ul>
-<li>wikipedia entry (<a href="https://en.wikipedia.org/wiki/Quaternion_group">link</a>)</li>
-</ul>
-
 <h2 id="references">References</h2>
 
 <ul>
@@ -620,20 +613,26 @@ margin-left: 0em;
 <p>H.S.M. Coxeter, <em>Regular Complex Polytopes</em> (Cambridge; Cambridge University Press, 1973).</p>
 </li>
 </ul>
+
+<p>See also</p>
+
+<ul>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Quaternion_group">Quaternion group</a></em></li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 10:35:06.
+  Last revised on October  2, 2018 at 11:44:10.
   See the <a href="https://ncatlab.org/nlab/history/quaternion group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quaternion+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quaternion+group/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/quaternion+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quaternion+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quaternion+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quaternion+group/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/quaternion+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quaternion+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quaternion group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
