--- a/pages/10066.html
+++ b/pages/10066.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5146/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5146/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -723,7 +723,34 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>But beware that equivariant <a class="existingWikiWord" href="/nlab/show/KO">KO</a>, even of the point, is much richer in higher degree (<a href="#Wilson16">Wilson 16, remark 3.34</a>)</p>
+<p>But beware that equivariant <a class="existingWikiWord" href="/nlab/show/KO">KO</a>, even of the point, is much richer in higher degree (<a href="#Wilson16">Wilson 16, remark 3.34</a>).</p>
+
+<p>In fact, <a class="existingWikiWord" href="/nlab/show/equivariant+KO-theory">equivariant KO-theory</a> of the point subsumes the <a class="existingWikiWord" href="/nlab/show/representation+rings">representation rings</a> over the <a class="existingWikiWord" href="/nlab/show/real+numbers">real numbers</a>, the <a class="existingWikiWord" href="/nlab/show/complex+numbers">complex numbers</a> and the <a class="existingWikiWord" href="/nlab/show/quaternions">quaternions</a>:</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msubsup><mi>KO</mi> <mi>G</mi> <mi>n</mi></msubsup><mo stretchy="false">(</mo><mo>*</mo><mo stretchy="false">)</mo><mspace width="thickmathspace"></mspace><mo>≃</mo><mspace width="thickmathspace"></mspace><mrow><mo>{</mo><mrow><mtable><mtr><mtd><mn>0</mn></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>7</mn></mtd></mtr> <mtr><mtd><msub><mi>R</mi> <mi>ℍ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">/</mo><msub><mi>R</mi> <mi>ℝ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>6</mn></mtd></mtr> <mtr><mtd><msub><mi>R</mi> <mi>ℍ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">/</mo><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>5</mn></mtd></mtr> <mtr><mtd><msub><mi>R</mi> <mi>ℍ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mphantom><mrow><mo stretchy="false">/</mo><msub><mi>R</mi> <mi>ℝ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow></mphantom></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>4</mn></mtd></mtr> <mtr><mtd><mn>0</mn></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>3</mn></mtd></mtr> <mtr><mtd><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">/</mo><msub><mi>R</mi> <mi>ℍ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>2</mn></mtd></mtr> <mtr><mtd><msub><mi>R</mi> <mi>ℝ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mo stretchy="false">/</mo><msub><mi>R</mi> <mi>ℂ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>1</mn></mtd></mtr> <mtr><mtd><msub><mi>R</mi> <mi>ℝ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo><mphantom><mrow><mo stretchy="false">/</mo><msub><mi>R</mi> <mi>ℝ</mi></msub><mo stretchy="false">(</mo><mi>G</mi><mo stretchy="false">)</mo></mrow></mphantom></mtd> <mtd><mo stretchy="false">|</mo></mtd> <mtd><mi>n</mi><mo>=</mo><mn>0</mn></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding="application/x-tex">
+  KO_G^n(\ast)
+  \;\simeq\;
+  \left\{
+  \array{
+    0 &amp;\vert&amp; n = 7
+    \\
+    R_{\mathbb{H}}(G)/ R_{\mathbb{R}}(G) &amp;\vert&amp; n = 6
+    \\
+    R_{\mathbb{H}}(G)/ R_{\mathbb{C}}(G) &amp;\vert&amp; n = 5
+    \\
+    R_{\mathbb{H}}(G) \phantom{/ R_{\mathbb{R}}(G) }  &amp;\vert&amp; n = 4
+    \\
+    0 &amp;\vert&amp; n = 3
+    \\
+    R_{\mathbb{C}}(G)/ R_{\mathbb{H}}(G) &amp;\vert&amp; n = 2
+    \\
+    R_{\mathbb{R}}(G)/ R_{\mathbb{C}}(G) &amp;\vert&amp; n = 1
+    \\
+    R_{\mathbb{R}}(G) \phantom{/ R_{\mathbb{R}}(G)} &amp;\vert&amp; n =0
+  }
+  \right.
+
+</annotation></semantics></math></div>
+<p>(<a href="#Greenlees05">Greenlees 05, p. 3</a>)</p>
 
 <p>Accordingly the construction of an <a class="existingWikiWord" href="/nlab/show/index">index</a> (<a class="existingWikiWord" href="/nlab/show/push-forward+in+generalized+cohomology">push-forward</a> to the point) in equivariant K-theory is a way of producing <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>-<a class="existingWikiWord" href="/nlab/show/representations">representations</a> from <a class="existingWikiWord" href="/nlab/show/equivariant+vector+bundles">equivariant vector bundles</a>. This method is also called <em><a class="existingWikiWord" href="/nlab/show/Dirac+induction">Dirac induction</a></em>.</p>
 
@@ -890,7 +917,7 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 11:57:12.
+  Last revised on October  2, 2018 at 12:12:33.
   See the <a href="https://ncatlab.org/nlab/history/equivariant K-theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
