--- a/pages/15269.html
+++ b/pages/15269.html
@@ -832,7 +832,13 @@ margin-left: 0em;
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE classification</a></li>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/wrapped+brane">wrapped brane</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE classification</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -856,15 +862,13 @@ margin-left: 0em;
 <p>Literature collection</p>
 
 <ul>
-<li>
-<p><a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em><a href="homepages.warwick.ac.uk/staff/Miles.Reid/McKay/">Links to papers on McKay correspondence</a></em></p>
+<li><a class="existingWikiWord" href="/nlab/show/Miles+Reid">Miles Reid</a>, <em><a href="homepages.warwick.ac.uk/staff/Miles.Reid/McKay/">Links to papers on McKay correspondence</a></em></li>
+</ul>
 
-<p>ver As an isomorphism between the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> and the plain <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of its <a href="ADE+singularity#ResolutionBySpheresTouchingAlongADynkinDiagram">resolution</a>, the McKay correspondence is proven in:</p>
-</li>
+<p>As an isomorphism between the <a class="existingWikiWord" href="/nlab/show/equivariant+K-theory">equivariant K-theory</a> of <a class="existingWikiWord" href="/nlab/show/ADE-singularity">ADE-singularity</a> and the plain <a class="existingWikiWord" href="/nlab/show/topological+K-theory">topological K-theory</a> of its <a href="ADE+singularity#ResolutionBySpheresTouchingAlongADynkinDiagram">resolution</a>, the McKay correspondence is proven in:</p>
 
-<li id="GSV83">
-<p><a class="existingWikiWord" href="/nlab/show/G%C3%A9rard+Gonzalez-Sprinberg">Gérard Gonzalez-Sprinberg</a>, <a class="existingWikiWord" href="/nlab/show/Jean-Louis+Verdier">Jean-Louis Verdier</a>, <em>Construction géométrique de la correspondance de McKay</em>, Ann. Sci. ́École Norm. Sup.16 (1983) 409–449. (<a href="http://www.numdam.org/item?id=ASENS_1983_4_16_3_409_0">numdam</a>)</p>
-</li>
+<ul>
+<li id="GSV83"><a class="existingWikiWord" href="/nlab/show/G%C3%A9rard+Gonzalez-Sprinberg">Gérard Gonzalez-Sprinberg</a>, <a class="existingWikiWord" href="/nlab/show/Jean-Louis+Verdier">Jean-Louis Verdier</a>, <em>Construction géométrique de la correspondance de McKay</em>, Ann. Sci. ́École Norm. Sup.16 (1983) 409–449. (<a href="http://www.numdam.org/item?id=ASENS_1983_4_16_3_409_0">numdam</a>)</li>
 </ul>
 
 <p>An analogous discussion for <a class="existingWikiWord" href="/nlab/show/derived+categories">derived categories</a> of coherent sheaves is in</p>
@@ -878,14 +882,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 01:37:24.
+  Last revised on October  2, 2018 at 15:00:22.
   See the <a href="https://ncatlab.org/nlab/history/McKay correspondence" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/McKay+correspondence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/McKay+correspondence/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/McKay+correspondence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/McKay+correspondence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/McKay correspondence/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
