--- a/pages/15566.html
+++ b/pages/15566.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6373/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6373/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -414,10 +414,28 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#properties">Properties</a><ul><li><a href="#As3dSpaceContainingKnots">As a 3-dimensional space</a><ul><li><a href="#as_a_3sphere_containing_knots">As a 3-sphere containing knots</a></li></ul></li><li><a href="#as_a_hyperbolic_3manifold_containing_prime_geodesics">As a hyperbolic 3-manifold containing prime geodesics</a></li><li><a href="#function_field_analogy">Function field analogy</a></li></ul></li><li><a href="#related_concepts">Related concepts</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#properties'>Properties</a></li>
+<ul>
+<li><a href='#As3dSpaceContainingKnots'>As a 3-dimensional space</a></li>
+<ul>
+<li><a href='#as_a_3sphere_containing_knots'>As a 3-sphere containing knots</a></li>
+</ul>
+<li><a href='#as_a_hyperbolic_3manifold_containing_prime_geodesics'>As a hyperbolic 3-manifold containing prime geodesics</a></li>
+<li><a href='#function_field_analogy'>Function field analogy</a></li>
+</ul>
+<li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Spec</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Spec(\mathbb{Z})</annotation></semantics></math> denotes the <a class="existingWikiWord" href="/nlab/show/spectrum+of+a+commutative+ring">spectrum</a> of the <a class="existingWikiWord" href="/nlab/show/commutative+ring">commutative ring</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding="application/x-tex">\mathbb{Z}</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/integers">integers</a>. For details see at <em><a class="existingWikiWord" href="/nlab/show/Zariski+topology">Zariski topology</a></em> <a href="Zariski+topology#SpecZ">this example</a>.</p>
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Spec</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Spec(\mathbb{Z})</annotation></semantics></math> denotes the <a class="existingWikiWord" href="/nlab/show/spectrum+of+a+commutative+ring">spectrum</a> of the <a class="existingWikiWord" href="/nlab/show/commutative+ring">commutative ring</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding="application/x-tex">\mathbb{Z}</annotation></semantics></math> of <a class="existingWikiWord" href="/nlab/show/integers">integers</a>. Its points are the <a class="existingWikiWord" href="/nlab/show/maximal+ideals">maximal ideals</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mi>p</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(p)</annotation></semantics></math>, for each prime <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>p</mi></mrow><annotation encoding="application/x-tex">p</annotation></semantics></math> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding="application/x-tex">\mathbb{Z}</annotation></semantics></math>, which are <a class="existingWikiWord" href="/nlab/show/closed+point">closed</a>, and the non-maximal <a class="existingWikiWord" href="/nlab/show/prime+ideal">prime ideal</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><mn>0</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">(0)</annotation></semantics></math>, whose closure is the whole of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Spec</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Spec(\mathbb{Z})</annotation></semantics></math>. For details see at <em><a class="existingWikiWord" href="/nlab/show/Zariski+topology">Zariski topology</a></em> <a href="Zariski+topology#SpecZ">this example</a>.</p>
+
+<p>Since <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℤ</mi></mrow><annotation encoding="application/x-tex">\mathbb{Z}</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/initial+object">initial object</a> in the category of commutative rings, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Spec</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Spec(\mathbb{Z})</annotation></semantics></math> is the <a class="existingWikiWord" href="/nlab/show/terminal+object">terminal object</a> in the category of <a class="existingWikiWord" href="/nlab/show/affine+schemes">affine schemes</a>.</p>
 
 <p>The <a class="existingWikiWord" href="/nlab/show/gros+topos">gros</a> <a class="existingWikiWord" href="/nlab/show/etale+topos">etale topos</a> over <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Spec</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Spec(\mathbb{Z})</annotation></semantics></math> is the context for <a class="existingWikiWord" href="/nlab/show/arithmetic+geometry">arithmetic geometry</a>. By the discussion at <em><a class="existingWikiWord" href="/nlab/show/Borger%27s+absolute+geometry">Borger's absolute geometry</a></em> it sits via an <a class="existingWikiWord" href="/nlab/show/essential+geometric+morphism">essential geometric morphism</a> over the <a class="existingWikiWord" href="/nlab/show/F1">F1</a>-<a class="existingWikiWord" href="/nlab/show/topos">topos</a>:</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>Et</mi><mo stretchy="false">(</mo><mi>Spec</mi><mo stretchy="false">(</mo><mi>ℤ</mi><mo stretchy="false">)</mo><mo stretchy="false">)</mo><mo>⟶</mo><mi>Et</mi><mo stretchy="false">(</mo><mi>Spec</mi><mo stretchy="false">(</mo><msub><mi>𝔽</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">
@@ -546,14 +564,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 11, 2018 at 05:47:45.
+  Last revised on October  3, 2018 at 03:59:48.
   See the <a href="https://ncatlab.org/nlab/history/Spec(Z)" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Spec%28Z%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Spec%28Z%29/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Spec%28Z%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Spec%28Z%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Spec%28Z%29" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Spec%28Z%29/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Spec%28Z%29" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Spec%28Z%29" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Spec(Z)/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
