--- a/pages/19744.html
+++ b/pages/19744.html
@@ -427,15 +427,15 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>In <a class="existingWikiWord" href="/nlab/show/number+theory">number theory</a>, the <em>Goldbach conjecture</em> is the <a class="existingWikiWord" href="/nlab/show/conjecture">conjecture</a> that</p>
+<p>In <a class="existingWikiWord" href="/nlab/show/number+theory">number theory</a>, the <em>Goldbach conjecture</em> is the following <a class="existingWikiWord" href="/nlab/show/conjecture">conjecture</a>.</p>
 
-<p><em>Every <a class="existingWikiWord" href="/nlab/show/even+number">even number</a> great than 2 is the <a class="existingWikiWord" href="/nlab/show/sum">sum</a> of two <a class="existingWikiWord" href="/nlab/show/prime+numbers">prime numbers</a></em>.</p>
+<p>\begin{conjecture} Every <a class="existingWikiWord" href="/nlab/show/even+number">even number</a> greater than 2 is the <a class="existingWikiWord" href="/nlab/show/sum">sum</a> of two <a class="existingWikiWord" href="/nlab/show/prime+numbers">prime numbers</a>. \end{conjecture}</p>
 
 <h2 id="properties">Properties</h2>
 
 <h3 id="relation_to_betrands_postulate">Relation to Betrand’s postulate</h3>
 
-<p>It was observed in <a href="#Ricardo05">Ricardo 05</a> that Goldbach conjecture implies a simple proof of <a class="existingWikiWord" href="/nlab/show/Bertrand%27s+postulate">Bertrand's postulate</a> (which has been proven, independently of the Goldbach conjecture). See <a href="Bertrand's+postulate#ProofFromGoldbach">there</a> for details.</p>
+<p>It was observed in <a href="#Ricardo05">Ricardo 05</a> that the Goldbach conjecture implies a simple proof of <a class="existingWikiWord" href="/nlab/show/Bertrand%27s+postulate">Bertrand's postulate</a> (which has been proven, independently of the Goldbach conjecture). See <a href="Bertrand's+postulate#ProofFromGoldbach">there</a> for details.</p>
 
 <h2 id="references">References</h2>
 
@@ -454,14 +454,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on October  3, 2018 at 02:12:39.
+  Last revised on October  3, 2018 at 03:57:50.
   See the <a href="https://ncatlab.org/nlab/history/Goldbach conjecture" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Goldbach+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Goldbach+conjecture" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Goldbach+conjecture/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Goldbach+conjecture" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Goldbach+conjecture" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Goldbach conjecture/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
