--- a/pages/17262.html
+++ b/pages/17262.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9081/#Item_8" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9081/#Item_9" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -512,11 +512,11 @@ margin-left: 0em;
 <p>graphics grabbed from Wikipedia <a href="https://upload.wikimedia.org/wikipedia/commons/5/59/Dynkin_diagram_D4.png">here</a></p>
 </blockquote>
 
-<p>This order-8 quaternion group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> is the first in a row of <em>generalized quaternion groups</em> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mrow><mn>4</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">Q_{4n}</annotation></semantics></math> , also called <strong>dicyclic groups</strong> which in turn are part of an even larger family.</p>
+<p>This order-8 quaternion group <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mn>8</mn></msub></mrow><annotation encoding="application/x-tex">Q_8</annotation></semantics></math> is the first in a row of <span class="newWikiWord">generalized quaternion groups<a href="/nlab/new/generalized+quaternion+groups">?</a></span>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mrow><mn>4</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">Q_{4n}</annotation></semantics></math>, which are also examples of <a class="existingWikiWord" href="/nlab/show/dicyclic+groups">dicyclic groups</a> which class forms part of an even larger family.</p>
 
 <h2 id="definition">Definition</h2>
 
-<p>The <em>dicyclic group</em> of order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>4</mn><mi>n</mi></mrow><annotation encoding="application/x-tex">4n</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>≥</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">n\geq 2</annotation></semantics></math>, is the <a class="existingWikiWord" href="/nlab/show/group">group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mrow><mn>4</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">Q_{4n}</annotation></semantics></math> defined by the presentation <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy="false">|</mo><msup><mi>x</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mo>=</mo><msup><mi>x</mi> <mi>n</mi></msup><msup><mi>y</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>2</mn></mrow></msup><mo>=</mo><msup><mi>y</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msup><mi>x</mi><mi>y</mi><mi>x</mi><mo>=</mo><mn>1</mn><mo stretchy="false">⟩</mo></mrow><annotation encoding="application/x-tex">\langle x,y | x^{2n}= x^{n} y^{-2}=y^{-1}x y x=1\rangle</annotation></semantics></math>. The <em>quaternion group</em> (of order 8) is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mrow><mn>4</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">Q_{4n}</annotation></semantics></math> for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">n=2</annotation></semantics></math>.</p>
+<p>The <em>generalised quaternion group</em> of order <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mn>4</mn><mi>n</mi></mrow><annotation encoding="application/x-tex">4n</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>≥</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">n\geq 2</annotation></semantics></math>, is the <a class="existingWikiWord" href="/nlab/show/group">group</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mrow><mn>4</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">Q_{4n}</annotation></semantics></math> defined by the presentation <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">⟨</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy="false">|</mo><msup><mi>x</mi> <mrow><mn>2</mn><mi>n</mi></mrow></msup><mo>=</mo><msup><mi>x</mi> <mi>n</mi></msup><msup><mi>y</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>2</mn></mrow></msup><mo>=</mo><msup><mi>y</mi> <mrow><mo lspace="verythinmathspace" rspace="0em">−</mo><mn>1</mn></mrow></msup><mi>x</mi><mi>y</mi><mi>x</mi><mo>=</mo><mn>1</mn><mo stretchy="false">⟩</mo></mrow><annotation encoding="application/x-tex">\langle x,y | x^{2n}= x^{n} y^{-2}=y^{-1}x y x=1\rangle</annotation></semantics></math>. The <em>quaternion group</em> (of order 8) is <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>Q</mi> <mrow><mn>4</mn><mi>n</mi></mrow></msub></mrow><annotation encoding="application/x-tex">Q_{4n}</annotation></semantics></math> for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">n=2</annotation></semantics></math>.</p>
 
 <h2 id="properties">Properties</h2>
 
@@ -576,6 +576,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/canonical+formula+of+myth">canonical formula of myth</a></p>
 </li>
+
+<li>
+<p><span class="newWikiWord">generalised quaternion group<a href="/nlab/new/generalised+quaternion+group">?</a></span></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -625,14 +629,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October  2, 2018 at 11:44:10.
+  Last revised on October  3, 2018 at 05:21:54.
   See the <a href="https://ncatlab.org/nlab/history/quaternion group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quaternion+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quaternion+group/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/quaternion+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quaternion+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quaternion+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quaternion+group/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/quaternion+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quaternion+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quaternion group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
